--- a/pages/ff145.md
+++ b/pages/ff145.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF145
+title: FF145_Major Jackson Interview, 9/23/2004
 manifest_name: ff145
 permalink: ff145
 external_manifest_url: 
