--- a/pages/ff146.md
+++ b/pages/ff146.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF146
+title: FF146: Kwame Dawes Interview, 9/25/2004
 manifest_name: ff146
 permalink: ff146
 external_manifest_url: 
