--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: FF152
+title: FF152_Elizabeth Alexander Interview, 9/23/2004
 manifest_name: ff152
 permalink: ff152
 external_manifest_url: 
