--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -10,7 +10,7 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
   
   <p style="text-align:center;"><img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png"></p>
-  <h1 style="text-align:center;">Brenda Marie Osbey</h1>
+  <p style="text-align:center;"><h1">Brenda Marie Osbey</h1></p>
  <p>Brenda Marie Osbey is a poet, theorist, orator, historiographer, and translator who has published several books of poems, including <i>Desperate Circumstance, Dangerous Woman</i>, <i>History and Other Poems</i>, and <i>All Souls: Essential Poems</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1"><sup>[1]</sup></a> Living among the vibrant fragments of centuries-old traditions, Osbey collects and distills the voices of the dead embedded in location and legacy.</p>
  <br>
 <p>She focuses her historical reclamation through her characters’ forces of imagination. Osbey disrupts conventional poetic forms in order to break with the false history designed by white settlers.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition.<a href="#fn2"><sup>[2]</sup></a> Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
