--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -9,7 +9,7 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
   
-  <p style="text-align:center;"><img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png"></p>
+  <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png"></p>
   <h1 style="text-align:center">Brenda Marie Osbey</h1>
  <p>Brenda Marie Osbey is a poet, theorist, orator, historiographer, and translator who has published several books of poems, including <i>Desperate Circumstance, Dangerous Woman</i>, <i>History and Other Poems</i>, and <i>All Souls: Essential Poems</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1"><sup>[1]</sup></a> Living among the vibrant fragments of centuries-old traditions, Osbey collects and distills the voices of the dead embedded in location and legacy.</p>
  <br>
@@ -34,7 +34,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 <hr>
 <p><a name="fn1">[1]</a>: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.</p>
-<p><a name="fn2">[2]</a>: Vrana, Laura. "On Brenda Marie Osbey, 'whom we have every right to love.'" <i>Summoning Our Saints: The Poetry and Prose of Brenda Marie Osbey</i> (Lexington Books, 2019). The Langston Hughes Review 262. (2020): 203-215. 
+<p><a name="fn2">[2]</a>: Vrana, Laura. "On Brenda Marie Osbey, 'whom we have every right to love.'" <i>Summoning Our Saints: The Poetry and Prose of Brenda Marie Osbey</i> (Lexington Books, 2019). <i>The Langston Hughes Review</i> 262. (2020): 203-215. 
 <p><a name="fn3">[3]</a>: Osbey, Brenda Marie. “Writing Home.” <i>The Southern Literary Journal</i> 40, no. 2 (2008): 19–41.</p>
 <p><a name="fn4">[4]</a>: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” <i>The Southern Literary Journal</i> 43, no. 2 (2011): 1–11.</p>
 <hr>
